fix body text on smallest width

--- a/src/components/PrimApp/PrimApp.css
+++ b/src/components/PrimApp/PrimApp.css
@@ -115,7 +115,8 @@
 
   .primApp__text-wrapper {
     width: 100%;
-    padding-right: 0;
+    padding: 0 10px;
+    box-sizing: border-box;
   }
 
   .primApp__title {
